--- a/notebooks (data collection)/3-embedding.ipynb
+++ b/notebooks (data collection)/3-embedding.ipynb
@@ -182,7 +182,7 @@
     "import os\n",
     "\n",
     "# initialize connection to pinecone (get API key at app.pinecone.io)\n",
-    "api_key = os.getenv(\"PINECONE_API_KEY\") or \"df1f6f93-cf18-4db5-a73c-677210bb038c\"\n",
+    "api_key = os.getenv(\"PINECONE_API_KEY\") or \"your pinecone api key\"\n",
     "\n",
     "# configure client\n",
     "pc = Pinecone(api_key=api_key)"
